app/base-2/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: infra-dashboard-api-dev
  labels:
    monitoring: prometheus
    istio-injection: enabled
