app/base-2/myapp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: first-app
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: first-app
