app/base-2/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: api
  annotations:
    cert-manager.io/issuer: staging-cluster-issuer
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - api.on-boarding.infra.adeptmind.net
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - api.on-boarding.infra.adeptmind.net
      tls:
        credentialName: api-devopsbyexample-com-crt
        mode: SIMPLE
