app/base-2/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: first-app
spec:
  hosts:
    - api.on-boarding.infra.adeptmind.net
    - first-app
    - rollouts-demo-vsvc1.local
  gateways:
    - api
  http:
    - name: first-app
      route:
        - destination:
            host: first-app
            subset: v1
          weight: 90
        - destination:
            host: first-app
            subset: v2
          weight: 10
    - name: http-primary
      route:
        - destination:
          host: rollouts-demo-stable  # Should match rollout.spec.strategy.canary.stableService
          port:
            number: 15372
          weight: 100
        - destination:
            host: rollouts-demo-canary  # Should match rollout.spec.strategy.canary.canaryService
            port:
              number: 15372
          weight: 0
